datasphere/gitops/templates/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: datasphere
    component: redis
spec:
  selector:
    app: datasphere
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
