datasphere/gitops/templates/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: datasphere-ui
  labels:
    app: datasphere
    component: ui
spec:
  selector:
    app: datasphere
    component: ui
  ports:
    - port: 8080
      targetPort: 8080
